Updated some of about pages alignment issues

--- a/css/styles2.css
+++ b/css/styles2.css
@@ -858,7 +858,10 @@
 	}
 	.info-chunk-with-cross-lines .info-title .info-title-text{
 		text-align:center;
-		padding:5px 10px;
+		/*padding:5px 10px;*/
+		padding:0 10px;
+		min-width: 85%;
+		display:inline-block;
 		background-color: #003567;
 	}
 	.info-chunk-with-cross-lines .last-info-row {
@@ -879,10 +882,10 @@
 	}
 	.content-body .brick-list-packets .half-column ul li{
 		background: url('../img/dl-icon.png') no-repeat 0 7px;
-		padding: 3px 0 3px 19px;
+		padding: 0 0 0 19px;
 		list-style: none;
 		margin: 0;
-		line-height: 18px;
+		line-height: 26px;
 	}
 /* About - Public Metings - Styles - End */
 
@@ -1246,7 +1249,12 @@
 
 .no-margin{margin:0 !important;}
 .margin-bottom-gap{margin:-4px 0 10px 0 !important;}
+.margin-bottom-5{margin:0 0 5px 0;}
 .normal-lineheight{line-height: normal;}
+
+.page-nav a {color: #666;}
+.page-nav a:hover {color: #69c;}
+.page-content h2.head1{font-size:18px;}
 
 
 
